[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/monster_battle_display_ui.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/hp_bar.tscn" id="2"]

[node name="MonsterBattleDisplay" type="Control"]
custom_minimum_size = Vector2(200, 180)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 180.0
theme_override_constants/separation = 4

[node name="Sprite" type="TextureRect" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
stretch_mode = 5
expand_mode = 1

[node name="InfoBox" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBox/InfoBox"]
layout_mode = 2
text = "MonsterName"

[node name="LevelLabel" type="Label" parent="VBox/InfoBox"]
layout_mode = 2
text = "Lv.5"

[node name="HPBar" parent="VBox/InfoBox" instance=ExtResource("2")]
layout_mode = 2
